@@ -4,6 +4,8 @@ import io.k8screen.backend.data.dto.ServiceDTO;
 import io.k8screen.backend.util.Util;
 import io.kubernetes.client.openapi.models.V1Service;
 import java.time.OffsetDateTime;
+import java.util.Objects;
+
 import org.jetbrains.annotations.NotNull;
 import org.springframework.stereotype.Component;
 
@@ -11,25 +13,24 @@ import org.springframework.stereotype.Component;
 public class ServiceConverter {
 
   public ServiceDTO toServiceDTO(final @NotNull V1Service service) {
-    final String serviceName = service.getMetadata().getName();
-    final String serviceType = service.getSpec().getType();
+    final String serviceName = Objects.requireNonNull(service.getMetadata()).getName();
+    final String serviceType = Objects.requireNonNull(service.getSpec()).getType();
     final String clusterIp = service.getSpec().getClusterIP();
     final String externalIp =
         (service.getSpec().getExternalIPs() != null
                 && !service.getSpec().getExternalIPs().isEmpty())
-            ? service.getSpec().getExternalIPs().get(0)
+            ? service.getSpec().getExternalIPs().getFirst()
             : "none";
 
     final String[] ports =
-        service.getSpec().getPorts().stream()
+        Objects.requireNonNull(service.getSpec().getPorts()).stream()
             .map(port -> port.getPort().toString())
             .toArray(String[]::new);
 
-    // Age hesaplama (5d21h formatında)
     final OffsetDateTime creationTimestamp = service.getMetadata().getCreationTimestamp();
     String age = "Unknown";
     if (creationTimestamp != null) {
-      age = Util.formatDate(creationTimestamp);
+      age = Util.formatAge(creationTimestamp);
     }
 
     return ServiceDTO.builder()
